src/test/ui/borrowck/borrowck-partial-reinit-2.stderr
error[E0383]: partial reinitialization of uninitialized structure `t`
  --> $DIR/borrowck-partial-reinit-2.rs:25:5
   |
LL |     t.b = Some(Box::new(u));
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0383`.
